# ufoutility

./: CMakeLists.txt  package.xml  super.cmake
cmake/: Utility-config.cmake.in  ufoutility-config.cmake.in
include/ufo/utility/: bit_set.hpp  enum.hpp  execution.hpp  index_iterator.hpp  macros.hpp  morton.hpp  timer.hpp  timing.hpp  type_traits.hpp
include/ufo/utility/io/: buffer.hpp  read_buffer.hpp  write_buffer.hpp
src/: timing.cpp
src/io/: buffer.cpp  read_buffer.cpp  write_buffer.cpp
tests/: CMakeLists.txt  morton_test.cpp  timing_test.cpp
